# Modelisation_geometrique

./: .gitignore  README.md  meson.build
AppTinyMesh/Include/: bezier.hpp  binaryExpr.hpp  boite.hpp  capsule.hpp  deformation.hpp  difference.hpp  implicits.h  intersect.hpp  mesh.h  mix.hpp  node.hpp  sphere.hpp  surface.hpp  tore.hpp  union.hpp
AppTinyMesh/Source/: bezier.cpp  bezier.hpp  binaryExpr.cpp  boite.cpp  capsule.cpp  deformation.hpp  difference.cpp  implicits.cpp  intersect.cpp  mesh.cpp  mix.cpp  qtemainwindow.cpp  sphere.cpp  surface.cpp  surface.hpp  tore.cpp  union.cpp
AppTinyMesh/UI/: interface.ui
